<resources>
    <string name="app_name">Expensio</string>
    <string name="expense">Expense</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="all_expenses">All Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expense_information">Expense Information</string>
    <string name="expense_title">Expense Title</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="add_record">Add Record</string>
    <string name="search_by_title">Search by Title</string>
    <string name="app_settings">App Settings</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_currency">Change Currency</string>
    <string name="expensio">EXPENSIO</string>
    <string name="total_expense">Total Expense</string>
</resources>